--- a/backend/backend/src/main/resources/application.properties
+++ b/backend/backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=backend
+spring.datasource.url=jdbc:mysql://localhost:3306/e-commerce-spring
+
+spring.datasource.username=admin
+spring.datasource.password=0000
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
