--- a/backend/backend/src/main/resources/application.properties
+++ b/backend/backend/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=backend
-spring.datasource.url=jdbc:mysql://localhost:3306/e-commerce-spring
+#spring.datasource.url=jdbc:mysql://localhost:3306/e-commerce-spring
 
-spring.datasource.username=admin
-spring.datasource.password=0000
-spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:h2:mem:e-commerce-spring
+spring.datasource.driverClassName=org.h2.Driver
+
+#spring.datasource.username=admin
+#spring.datasource.password=0000
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
